# hardwareDebugger

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: AppEventBus.cpp  AppEventBus.h  AppObserverInterface.h  DatabaseManager.cpp  DatabaseManager.h  ServiceManager.cpp  ServiceManager.h  ThemeManager.cpp  ThemeManager.h
src/data_models/: BasicTableViewModel.cpp  BasicTableViewModel.h  BasicTreeViewModel.cpp  BasicTreeViewModel.h  SortFilterProxyModel.cpp  SortFilterProxyModel.h  TransactionTableViewModel.cpp  TransactionTableViewModel.h
src/export/: CsvExportStrategy.cpp  CsvExportStrategy.h  DataExporter.cpp  DataExporter.h  ExportStrategyInterface.h  HtmlExportStrategy.cpp  HtmlExportStrategy.h  JsonExportStrategy.cpp  JsonExportStrategy.h  TxtExportStrategy.cpp  TxtExportStrategy.h
src/repositories/: AssertionRepository.cpp  AssertionRepository.h  DesignRepository.cpp  DesignRepository.h  SignalRepository.cpp  SignalRepository.h  TransactionRepository.cpp  TransactionRepository.h
src/services/: AssertionViewService.cpp  AssertionViewService.h  BackgroundTaskService.cpp  BackgroundTaskService.h  DashboardService.cpp  DashboardService.h  DesignViewService.cpp  DesignViewService.h  SignalViewService.cpp  SignalViewService.h  TransactionViewService.cpp  TransactionViewService.h  ViewDataServices.h
src/ui/: AssertionView.cpp  AssertionView.h  BasicTableView.cpp  BasicTableView.h  BasicTreeView.cpp  BasicTreeView.h  DashboardSummaryChartWidget.cpp  DashboardSummaryChartWidget.h  DashboardWidget.cpp  DashboardWidget.h  DesignView.cpp  DesignView.h  GuiMgr.cpp  GuiMgr.h  MainWindow.cpp  MainWindow.h  SelectionDetailsWidget.cpp  SelectionDetailsWidget.h  SignalView.cpp  SignalView.h  TransactionView.cpp  TransactionView.h
src/workers/: DataLoadingWorker.cpp  DataLoadingWorker.h
